# aji_openocd

./: .gitignore  .gitmodules  .p4ignore  Makefile.am  README  README.PICE  README.aji_client  README.git.setup  README.linux.git.setup  README.mingw64  README.mingw64.git.setup  README.mingw64.setup  README.openocd  README.workspace.setup  bootstrap  configure.ac
.github/workflows/: snapshot.yml
contrib/loaders/: Makefile
doc/: openocd.texi
src/: Makefile.am  main.c  openocd.c
src/flash/nor/: fespi.c
src/helper/: command.c  configuration.c  ioutil.c  jim-nvp.h  options.c  replacements.h  util.c
src/jtag/: Makefile.am  adapter.c  commands.c  commands.h  core.c  interfaces.c  jtag.h  jtagcore_overwrite.h  tcl.c
src/jtag/aji_client/: .gitignore  Makefile.am  aji_client.c  jtag_minidriver.h  jtagservice.c  jtagservice.h  minidriver_imp.h
src/jtag/aji_client/aji/: Makefile.am  aji.h  c_jtag_client_gnuaji.h  c_jtag_client_gnuaji_lib64.c  c_jtag_client_gnuaji_win64.c  c_jtag_client_gnuaji_win64.h
src/jtag/drivers/: Makefile.am  driver.c  minidriver_imp.h
src/jtag/drivers/aji_client/: Makefile.am  aji_client.c  jtagservice.c  jtagservice.h
src/jtag/drivers/aji_client/aji/: Makefile.am  aji.h  c_jtag_client_gnuaji.c  c_jtag_client_gnuaji.h  c_jtag_client_gnuaji_lib64.c  c_jtag_client_gnuaji_lib64.h  c_jtag_client_gnuaji_win64.c  c_jtag_client_gnuaji_win64.h
src/jtag/drivers/jtagserv/: Makefile.am  jtagserv.c  jtagserv_access.h  jtagserv_access_libusb.c  jtagservice.c  jtagservice.h
src/jtag/drivers/jtagserv/aji/: c_aji.h  c_jtag_client_gnuaji_lib64.h  c_jtag_client_gnuaji_win64.c
src/jtag/drivers/jtagserv/h/: Makefile.am  aji.h  c2_aji.h  c2_jtag_client_gnuaji.h  c_aji.h  c_jtag_client_gnuaji.c  c_jtag_client_gnuaji.h  c_jtag_client_gnuaji_lib64.h  c_jtag_client_gnuaji_win64.c  c_jtag_client_gnuaji_win64.h  caji.h  cjtag_client_gnuaji.h  jtag_client_gnuaji.h  jtag_client_gnuaji_lib64.h  jtag_client_gnuaji_win64.cpp  jtag_client_gnuaji_win64.h
src/jtag/jclient/: Makefile.am  jclient.c  jtag_minidriver.h  jtagservice.c  jtagservice.h  minidriver_imp.h
src/jtag/jclient/aji/: Makefile.am  aji.h  c_jtag_client_gnuaji.h  c_jtag_client_gnuaji_lib64.c  c_jtag_client_gnuaji_lib64.h  c_jtag_client_gnuaji_lib64A.c  c_jtag_client_gnuaji_lib64A.h  c_jtag_client_gnuaji_win64.c  c_jtag_client_gnuaji_win64.h
src/jtag/minidriver/: minidriver_imp.h
src/jtag/minijtagserv/: Makefile.am  README.git.win32.bat  aji  h  jtag_minidriver.h  jtagservice.c  jtagservice.h  lib64  minidriver_imp.h  minijtagserv.c  win64
src/jtag/minijtagserv/aji/: aji.h  c_jtag_client_gnuaji_win64.c  c_jtag_client_gnuaji_win64.h
src/jtag/zy1000/: jtag_minidriver.h  zy1000.c
src/server/: server.c  tcl_server.c
src/transport/: transport.c
store/: README.PICE  README.mingw64  README.workspace.setup  aji_client-barebone.cfg  aji_client-localhost40000.cfg  aji_client-sifive-hifive1-revb.cfg  aji_client-vjtag-localhost40000.cfg  aji_client-vjtag-sifive-hifive1-revb.cfg  aji_client-vjtag.cfg  aji_client.cfg  altera_stratix10__aji_client.cfg  jclient-barebone.cfg  jclient-localhost40000.cfg  jclient-sifive-hifive1-revb.cfg  jclient-vjtag-localhost40000.cfg  jclient-vjtag-sifive-hifive1-revb.cfg  jclient-vjtag.cfg  jclient.cfg  jtag-localhost40000.conf  jtag.conf  minijtagserv-barebone.cfg  minijtagserv-localhost40000.cfg  minijtagserv-sifive-hifive1-revb.cfg  minijtagserv-vjtag-localhost40000.cfg  minijtagserv-vjtag-sifive-hifive1-revb.cfg  minijtagserv-vjtag.cfg  minijtagserv.cfg  prep-for-bdba.sh  prep-for-protex.sh
tcl/board/: altera_arria10__aji_client.cfg  altera_arria10__aji_client_vjtag.cfg  altera_arria10_jclient.cfg  altera_arria10_niosv__aji_client.cfg  altera_sockit.cfg  altera_stratix10__aji_client.cfg
tcl/interface/: altera-usb-blaster.cfg
testing/build.test1/: Makefile
testing/build.test2/: Makefile
